force-app/main/default/objects/Application_Site__c/Application_Site__c.object-meta.xml
<CustomObject>
    <label>Application Site</label>
    <nameField>
        <label>Application Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>