force-app/main/default/objects/Application_Site__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <label>Active Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName
        >Currently Implementing Site Proposing To Continue</fullName>
                <default>true</default>
                <label>Currently Implementing Site Proposing To Continue</label>
            </value>
            <value>
                <fullName>Currently Implementing Site Not Continuing</fullName>
            </value>
            <value>
                <fullName
        >Not Currently Implementing Site Proposing to Reinstate</fullName>
                <label
        >Not Currently Implementing Site Proposing to Reinstate</label>
            </value>
            <value>
                <fullName>Not Currently Implementing Site</fullName>
            </value>
            <value>
                <fullName>New Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>