force-app/main/default/objects/Application_Site__c/fields/Average_Daily_Attendance_During_School__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Attendance_During_School__c</fullName>
    <label>Average Daily Attendance During School</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>