force-app/main/default/objects/Application_Site__c/fields/Change_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Attendance__c</fullName>
    <label>Change in Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Higher</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Mostly the Same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>