force-app/main/default/objects/Application_Site__c/fields/Number_of_Applicable_Youth__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applicable_Youth__c</fullName>
    <label>Number of Applicable Youth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>