force-app/main/default/objects/Application_Site__c/fields/Number_of_Club_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Club_Members__c</fullName>
    <label>Number of Club Members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>