force-app/main/default/objects/Application_Site__c/fields/School_Implementation_Site__c.field-meta.xml
<CustomField>
    <fullName>School_Implementation_Site__c</fullName>
    <label>School Implementation Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>