force-app/main/default/objects/Application_Site__c/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Sites</relationshipLabel>
    <relationshipName>Application_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>