force-app/main/default/objects/Application_Site__c/fields/Tribes_served__c.field-meta.xml
<CustomField>
    <fullName>Tribes_served__c</fullName>
    <label>Tribe(s) served</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>